# DOTM_HotBox

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.py  parse_svg.py  parse_svg2.py  partitions.csv  partitions_esp32s3.csv  pdf.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  yd_esp32-s3-report-prompt.md
.errata/: sdkconfig.bak  test.txt
.github/: copilot-instructions.md
.github/instructions/: esp-idf-component.instructions.md  lvgl-ui.instructions.md  sc-hid.instructions.md  ship-config-schema.instructions.md
.github/prompts/: add-gamelink-event.prompt.md  flash-and-monitor.prompt.md  new-freertos-task.prompt.md  new-hid-action.prompt.md  new-ship-config.prompt.md  new-ui-screen.prompt.md
.github/skills/sci-fi-ui-design/: SKILL.md
art/style_drake_military/: README.md
art/style_origin_lux/: README.md
components/esp_io_expander_pca9535/: CMakeLists.txt  esp_io_expander_pca9535.c  idf_component.yml
components/esp_lcd_jd9365_8/: CMakeLists.txt  esp_lcd_jd9365_8.c  idf_component.yml
components/esp_lcd_jd9365_8/include/: esp_lcd_jd9365_8.h
components/esp_lcd_touch_gsl3670/: CMakeLists.txt  esp_lcd_touch_gsl3670.c  gsl_point_id.c  idf_component.yml
components/esp_lcd_touch_gsl3670/include/: esp_lcd_touch_gsl3670.h
components/sc_bsp/: CMakeLists.txt  sc_bsp_d1001.c
components/sc_bsp/include/: sc_bsp.h
components/sc_config/: CMakeLists.txt  sc_config.c
components/sc_config/include/: sc_config.h
components/sc_gamelink/: CMakeLists.txt  Kconfig  sc_gamelink.c
components/sc_gamelink/include/: sc_gamelink.h
components/sc_hid/: CMakeLists.txt  sc_hid.c  sc_hid_desc.c
components/sc_hid/include/: sc_hid.h  sc_hid_desc.h
components/sc_network/: CMakeLists.txt  Kconfig  sc_network.c  wifi_hal_stubs.c
components/sc_network/include/: sc_network.h
components/sc_storage/: CMakeLists.txt  sc_storage.c
components/sc_storage/include/: sc_storage.h
components/sc_ui/: CMakeLists.txt  sc_ui.c  sc_ui_sprites.c  sc_ui_theme.c
components/sc_ui/assets/sprites/drake/: BL.c  BR.c  CENTER_stretch.c  EDGE_B_tile_X.c  EDGE_L.c  EDGE_R.c  EDGE_T_tile_X.c  TL.c  TR.c  TRIPLE_STACK_180x96.c  btn_active.c  btn_armed.c  btn_danger.c  btn_disabled.c  btn_idle.c
components/sc_ui/assets/sprites/origin/: BL.c  BR.c  BREADCRUMB.c  CENTER.c  EDGE__B.c  EDGE__T.c  TL.c  TR.c  btn_active.c  btn_confirm_gold.c  btn_danger.c  btn_disabled.c  btn_hover.c  btn_idle.c
components/sc_ui/include/: sc_ui.h  sc_ui_atlas_drake.h  sc_ui_atlas_origin.h  sc_ui_screen_bootmenu.h  sc_ui_screen_calibration.h  sc_ui_screen_splash.h  sc_ui_screens.h  sc_ui_sprites.h  sc_ui_theme.h  sc_ui_theme_sprites.h
components/sc_ui/screens/: sc_ui_screen_bootmenu.c  sc_ui_screen_calibration.c  sc_ui_screen_console.c  sc_ui_screen_console.h  sc_ui_screen_drake.c  sc_ui_screen_drake.h  sc_ui_screen_origin.c  sc_ui_screen_origin.h  sc_ui_screen_pairing.c  sc_ui_screen_pairing.h  sc_ui_screen_settings.c  sc_ui_screen_settings.h  sc_ui_screen_splash.c  sc_ui_screen_theme_selector.c  sc_ui_screen_theme_selector.h
components/sc_web/: CMakeLists.txt  sc_web.c
components/sc_web/include/: sc_web.h
data/ships/: cutlass_black.json
data/ships_library/: drake_cutlass_red.json  misc_prospector.json  rsi_scorpius.json
docs/: wysiwyg_specification.md
docs/refactor/: phase1_bsp.md  phase2_hid.md  phase3_storage.md  phase4_web.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
scratch/: align_test.py
sdcard/assets/themes/drake/sprites/: sprites_meta.json
sdcard/ships/: avenger_titan.json  caterpillar.json  corsair.json  cutlass_black.json  dotm_hotbox_demo.json  editor_controls.json  ship_templates.json
tools/: convert_branding_images.py  generate_svgs.py  pack_sprite_atlas.py  prep_sdcard.sh  rasterize_sprites.py  requirements_atlas.txt
tools/mock_ui/: extract_sprites.py  gen_c.py  gen_h.py  generate_ui_bitmaps.py  generate_ui_hifi_png.py  generate_ui_png.py  generate_ui_png_hifi.py  svg_to_bin.py
tools/pc_bridge/: bridge.py  event_parser.py
web_portal/: index.html  package-lock.json  package.json  vite.config.ts
web_portal/public/: manifest.json  sw.js
web_portal/src/: app.tsx  index.css  main.tsx
web_portal/src/assets/: theme_svgs.ts
