idf_component_register(
    SRCS
        "sc_ui.c"
        "sc_ui_theme.c"
        "sc_ui_sprites.c"
        "screens/sc_ui_screen_console.c"
        "screens/sc_ui_screen_settings.c"
        "screens/sc_ui_screen_pairing.c"
        "screens/sc_ui_screen_calibration.c"
        "screens/sc_ui_screen_bootmenu.c"
        "screens/sc_ui_screen_splash.c"
        "screens/sc_ui_screen_drake.c"
        "screens/sc_ui_screen_origin.c"
        "screens/sc_ui_screen_theme_selector.c"
    INCLUDE_DIRS
        "include"
        "screens"
    REQUIRES
        lvgl__lvgl
        sc_bsp
        sc_config
        sc_hid
        sc_gamelink
        esp_timer
        nvs_flash
        heap
)


